k8s/shared-services/frontend/base/deployment.yaml
---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: svelte
    app.kubernetes.io/name: svelte
    app.kubernetes.io/part-of: henri
  name: frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: svelte
      app.kubernetes.io/name: svelte
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: svelte
        app.kubernetes.io/name: svelte
    spec:
      containers:
        - name: website
          image: vandercycle/professional-website:latest
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              memory: 256Mi
          ports:
            - name: http
              containerPort: 3000
          readinessProbe: # To check if the Pod is ready to serve traffic or not
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
