k8s/shared-services/frontend/base/service.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: svelte
    app.kubernetes.io/name: svelte
  name: frontend 
  namespace: default
spec:
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: svelte
    app.kubernetes.io/name: svelte
  # type: ClusterIP
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
      nodePort: 30300
